# coop-api

./: .gitignore  Cargo.toml  Procfile  dev.mjs  index.js  index.mjs  package.json  router.mjs
auth/: _auth.mjs  access-cooperdm.mjs  access-discord.mjs  access.mjs  authRouter.mjs
game-example/players/: playerManager.mjs
game/players/: playerManager.mjs
game/world/: worldManager.mjs
services/adverts/: advertsRouter.mjs
services/bases/: basesRouter.mjs
services/blog/: blogRouter.mjs
services/donation/: donationRouter.mjs
services/economy/: economyRouter.mjs  tradingRouter.mjs
services/members/: membersRouter.mjs
services/projects/: projectsRouter.mjs
src/: dynamic_objects.rs  game_state.rs  level.rs  main.rs  messages.rs  physics.rs  player.rs  projectiles.rs  spawns.rs  vehicles.rs  weapons.rs
utils/: modelLoader.js
