[package]
name = "coop-game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework for WebSocket support
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Futures for stream handling
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"

# Physics engine
rapier3d = { version = "0.17", features = ["simd-stable"] }
nalgebra = "0.32"

# Time handling
chrono = "0.4"

# Random number generation
rand = "0.8"

# Once cell for runtime initialization
once_cell = "1.19"
